# expenses

./: .gitignore  category.py  column.py  executor.py  hebrew_category.py  index.html  main.ipynb  main.py  normalize.py  pyproject.toml  utils.py
